crates/libs/frieze/tests/ui/empty_named_struct.stderr
error: frieze: struct must have at least one named field.
 --> tests/ui/empty_named_struct.rs:4:8
  |
4 | struct S {}
  |        ^
